# univention-corporate-server

./: .build_unbuilt_packages  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXME  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.dev.md  README.md  TODO-ucr-config-files.md  TODO.md  UCS.srctrlbm  UCS.srctrlprj  a.py  autotype.py  buglog  grep_ucr_translatables  pyproject.toml  removal500.md  sample_udm_call.py  udm_on_debian.txt  univention-bind.yaml  univention-directory-notifier.yaml
base/univention-base-files/: Makefile.am  README.md  configure.in
base/univention-base-files/conffiles/: autostart.py  hostname  inputrc  interfaces.py  issue  keymap.py  locale.py  ntp.conf  resolv.conf  resolv.py  set_locale.py  xkbKeyboard.py
base/univention-base-files/debian/: changelog  control  copyright  libunivention-config0.symbols  python-univention-config-registry.install  rules  ucslint.overrides  univention-base-files.dirs  univention-base-files.install  univention-base-files.maintscript  univention-base-files.maintscripts  univention-base-files.manpages  univention-base-files.postinst  univention-base-files.postrm  univention-base-files.preinst  univention-base-files.univention-config-registry  univention-base-files.univention-config-registry-categories  univention-base-files.univention-config-registry-variables  univention-base-files.univention-service  univention-config-dev.install  univention-config-registry.postrm  univention-config-registry.univention-config-registry-categories  univention-config-registry.univention-service  univention-config.manpages  univention-config.postinst
base/univention-base-files/doc/: univention-config-registry.8  univention-install-config-registry-info.1  univention-install-config-registry.1  univention-install-service-info.1  univention-keyboardmapping.1  univention-set-logfile-permissions.8
base/univention-base-files/include/: Makefile.am
base/univention-base-files/python/: univention-install-service-info  univention_baseconfig.py
base/univention-base-files/scripts/: init-autostart.lib  jitter  univention-check-templates  univention-config-registry-backup  univention-default-ntp-pool  univention-keyboardmapping  univention-set-logfile-permissions
base/univention-base-files/tests/: rsyslog56042
base/univention-base-files/univention-directory-policy/: nfsmounts.py  univention-policy-update-config-registry.py
base/univention-config-registry/: .coveragerc  .coveragerc.pytest  .gitignore  README.md  pytest.ini  setup.cfg  setup.py  ucr.pm
base/univention-config-registry/conffiles/: bash.bashrc  hostname  inputrc  interfaces.py  issue  issue.net  keymap.py  locale.gen  locale.py  logrotate.conf  modules  networks  ntp.conf  profile  resolv.conf  resolv.py  route.py
base/univention-config-registry/debian/: changelog  clean  control  copyright  libunivention-config-dev.install  libunivention-config0.shlibs  not-installed  postinst  postrm  preinst  python-univention-config-registry.dirs  python-univention-config-registry.install  python-univention-config-registry.postinst  python-univention-config-registry.preinst  python-univention-config-registry.prerm  python-univention-config-registry.pyinstall  python3-univention-config-registry.install  python3-univention-config-registry.pyinstall  rules  ucslint.overrides  univention-config-dev.install  univention-config-dev.links  univention-config-dev.manpages  univention-config-registry.dirs  univention-config-registry.install  univention-config-registry.links  univention-config-registry.maintscript  univention-config-registry.postinst  univention-config-registry.postrm  univention-config-registry.preinst  univention-config-registry.univention-config-registry  univention-config-registry.univention-config-registry-categories  univention-config-registry.univention-config-registry-mapping  univention-config-registry.univention-config-registry-variables  univention-config-registry.univention-service  univention-config-wrapper.install  univention-config-wrapper.postrm  univention-config-wrapper.preinst  univention-config.dirs  univention-config.install  (+5 more)
base/univention-config-registry/doc/: README  jitter.1  ldapsearch-decode64.1  ldapsearch-wrapper.1  (+6 more)
base/univention-debug/: .gitignore  Makefile.am  README.md  configure.in  setup.py  setup.py.in
base/univention-ipcalc/: .gitignore  README.md  README.txt  setup.cfg  setup.py  univention-ipcalc  univention-ipcalc6
base/univention-licence/: .gitignore  Makefile.am  README.md  configure.in  dh_doxygen  setup.py.in
base/univention-policy/: .gitignore  Makefile.am  README.md  configure.ac  configure.in
base/univention-updater/: .dockerignore  .gitignore  35univention-management-console-module-updater.inst  41univention-updater.inst  Dockerfile  Makefile  README.devel  README.md  conftest.py  docker-compose.yaml  license_uuid.py  maintained-packages.txt  preup.sh  setup.cfg  setup.py
management/univention-directory-manager-rest/: 22univention-directory-manager-rest.inst  Makefile.PyPI  PYPI_README.md  README.md  backup_redis.py  pyproject.toml  setup_async_client.py  setup_client.py
packaging/ucslint/: .dockerignore  Dockerfile  README.md  READNE.md  setup.cfg  setup.py  testucslint.sh  ucslint  ucslint-pre-commit  ucslint-sort-output.py  ucslint.py  ucspep8
packaging/univention-l10n/: .gitignore  README.md  base_makefile  setup.cfg  setup.py  ucr-l10n  ucr-l10n-generate-po  univention-l10n-build  univention-l10n-install  univention-l10n.schema.json  univention-ucs-translation-build-package  univention-ucs-translation-fakemessage  univention-ucs-translation-merge  univention_l10n.pm
services/univention-keycloak/: 49univention-keycloak-client.inst  LICENSE  README.md  setup.cfg  setup.py
test/generate-appliance/: README.md  setup.cfg  setup.py
test/ucs-test/: 35ucs-test-umc-module.inst  README.md  lint  pwdfile  pyproject.toml  test-roles.py  tox.ini  ucs-test-udm.public  ucs-test-umc-module.public  ucs-test-umc-performance.install
(+35519 files in other folders)
