[metadata]
name = Univention Configuration Registry
maintainer = Univention GmbH
maintainer_email = packages@univention.de
url = https://www.univention.de/
description = Univention Corporate Server Configuration management tool
license = GNU Affero General Public License v3
platforms = UCS
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: System Administrators
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: System :: Systems Administration

[options]
zip_safe = False
python_requires = =2.7
package_dir =
	=python
packages = find:
setup_requires =
	setuptools
install_requires =
	enum34; python_version < "3.0"
	lazy-object-proxy
	ipaddress; python_version < "3.0"
	six
	typing; python_version < "3.5"
tests_require =
	pytest
	pytest-benchmark
	pytest-cov
	pytest-mock

[options.packages.find]
where = python

[options.entry_points]
console_scripts =
	ldapsearch-decode64 = univention.ldif:ldif_decode
	ldapsearch-wrapper = univention.ldif:ldif_unwrap

[tool:pytest]
required_plugins =
	pytest-benchmark
	pytest-cov
	pytest-mock
testpaths =
	tests
	python/univention/
addopts =
	--verbose
	--showlocals
	-r sx
	--cov-config=setup.cfg
	--cov=python/univention/
	--cov-branch
	--cov-report term-missing
	--cov-report html:pytest/
	--cov-report xml:coverage.xml
	--junit-xml pytest.xml
	--doctest-modules
marksers =
	slow: mark test as slow

[coverage:run]
branch = True
source =
	python/

[coverage:paths]
lib =
	base/univention-config-registry/python/univention/
	python/univention/
	*/python/univention/
	*/dist-packages/univention/
	*/site-packages/univention/

[coverage:report]
show_missing = True
exclude_lines =
	pragma: no cover
	except ImportError:
	raise NotImplementedError
	if __name__ == .__main__.:

[coverage:html]
directory = pytest

[coverage:xml]
output = coverage.xml
