[metadata]
name = univention-ipcalc
maintainer = Univention GmbH
maintainer_email = packages@univention.de
url = https://www.univention.de/
description = Univention Corporate Server IP calculation helper
license = GNU Affero General Public License v3
platforms = UCS
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: System Administrators
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: System :: Software Distribution

[options]
zip_safe = False
python_requires = >=3
package_dir=
	=.
packages =
	univention
	univention.ipcalc
setup_requires =
	setuptools
install_requires =
	ipaddr; python_version < "3.0"
	six
	typing; python_version < "3.5"
tests_require =
	pytest
	pytest-cov

[options.entry_points]
console_scripts =
	univention-ipcalc6 = univention.ipcalc.__main__:main

[tool:pytest]
required_plugins =
	pytest-cov
testpaths =
	tests
addopts =
	--verbose
	--showlocals
	-r sx
	# --cov-config=setup.cfg
	--cov=univention/ipcalc/
	--cov-branch
	--cov-report term-missing
	#--cov-report html:pytest/
	#--cov-report xml:coverage.xml
	#--junit-xml pytest.xml
	--doctest-modules
python_paths = .

[coverage:run]
branch = True

[coverage:report]
show_missing = True
exclude_lines =
	pragma: no cover
	except ImportError:
	raise NotImplementedError
	if __name__ == .__main__.:

[coverage:html]
directory = pytest

[coverage:xml]
output = coverage.xml
