AC_INIT(lib/license.c)

AM_INIT_AUTOMAKE(univentionlicense, 4.0)
AM_PROG_LIBTOOL

LIB_CURRENT=0
LIB_REVISION=1
LIB_AGE=0
AC_SUBST(LIB_CURRENT)
AC_SUBST(LIB_REVISION)
AC_SUBST(LIB_AGE)

AC_PROG_INSTALL
AC_LANG_C
AC_HEADER_STDC

AC_CHECK_LIB([crypto], [RSA_sign], [CRYPTO_LIB=-lcrypto], [AC_MSG_ERROR([Crypto library is missing])])
AC_CHECK_LIB([ldap], [ldap_init], [LDAP_LIB=-lldap], [AC_MSG_ERROR([LDAP library is missing])])

AC_CHECK_HEADER([openssl/rsa.h], [], [AC_MSG_ERROR([OpenSSL development files are missing])])
AC_CHECK_HEADER([ldap.h], [], [AC_MSG_ERROR([LDAP developmenmt files are missing])])

AC_SUBST([CRYPTO_LIB])
AC_SUBST([LDAP_LIB])

AC_OUTPUT(Makefile include/univention/Makefile include/Makefile lib/Makefile tools/Makefile internal-tools/Makefile setup.py tools/univention-license-import)
