[metadata]
name = Univention Updater
maintainer = Univention GmbH
maintainer_email = packages@univention.de
url = https://www.univention.de/
description = Univention Corporate Server System upgrading tool
license = GNU Affero General Public License v3
platforms = UCS
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: System Administrators
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: System :: Software Distribution

[options]
zip_safe = False
python_requires = =2.7
package_dir =
	=modules
packages = find:
setup_requires =
	setuptools
install_requires =
	monotonic; python_version < "3.3"
	psutil
	python-apt
	six
	typing; python_version < "3.5"
tests_require =
	lazy-object-proxy
	pytest
	pytest-cov
	pytest-mock

[options.packages.find]
where = modules

[options.entry_points]
console_scripts =
	univention-prune-kernels = univention.updater.scripts.kernel:main
	updater-statistics = univention.updater.scripts.statistics:main
	univention-policy-maintenance = univention.updater.scripts.policy_maintenance:main
	univention-policy-repository-sync = univention.updater.scripts.policy_repo_sync:main
	univention-policy-set-repository-server = univention.updater.scripts.policy_repo_server:main
	univention-actualise = univention.updater.scripts.actualize:main
	univention-repository-create = univention.updater.scripts.repo_create:main
	univention-repository-update = univention.updater.scripts.repo_update:main
	univention-updater = univention.updater.scripts.updater:main
	univention-upgrade = univention.updater.scripts.upgrade:main

[tool:pytest]
required_plugins =
	pytest-cov
	pytest-timeout
testpaths =
	tests
	modules/univention/updater
	umc/python/updater
addopts =
	--verbose
	--showlocals
	-r sx
	--cov-config=setup.cfg
	--cov=univention/updater/
	--cov=modules/univention/updater/
	--cov=umc/python/updater/
	--cov-branch
	--cov-report term-missing
	--cov-report html:pytest/
	--cov-report xml:coverage.xml
	--junit-xml pytest.xml
	--doctest-modules

[coverage:run]
branch = True
source =
	modules/
	umc/python/updater/

[coverage:paths]
lib =
	base/univention-updater/modules/univention/updater/
	modules/univention/updater/
	*/modules/univention/updater/
	*/dist-packages/univention/updater/
	*/site-packages/univention/updater/
	univention/updater/
umc =
	base/univention-updater/umc/python/updater/
	umc/python/updater/
	*/umc/python/updater/
	*/dist-packages/univention/management/console/modules/updater/
	*/site-packages/univention/management/console/modules/updater/

[coverage:report]
show_missing = True
exclude_lines =
	pragma: no cover
	except ImportError:
	raise NotImplementedError
	if __name__ == .__main__.:

[coverage:html]
directory = pytest

[coverage:xml]
output = coverage.xml
