[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "udm-rest-api-client"
description = "Client library to interact with the Univention Directory Manager (UDM) REST API."
requires-python = ">=3.7"
license = "AGPL-3.0-only"
authors = [
    { name = "Univention Maintainers", email = "packages@univention.de" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dynamic = ["readme", "version"]
dependencies = [
    "typing_extensions>=4.0.0",
    "uritemplate>=4.1.1",
    "CacheControl>=0.14.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.0.0",
]
dev = [
    "mypy>=1.9.0",
    "mypy-extensions>=1.0.0",
    "types-requests>=2.0.0",
]
cli = [
    "python-ldap>=3.0.0",
    "requests>=2.0.0",
]
sync = [
    "requests>=2.0.0",
]

[project.urls]
Homepage = "https://www.univention.com"
Documentation = "https://docs.software-univention.de/developer-reference/latest/en/udm/rest-api.html"
Repository = "https://github.com/univention/univention-corporate-server"
Source = "https://github.com/univention/univention-corporate-server/tree/5.2-0/management/univention-directory-manager-rest/src/univention/admin/rest"

[project.scripts]
udm = "univention.admin.rest.client.__main__:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/univention",
]
only-include = [
    "src/univention/admin/rest/client",
    "src/univention/admin/rest/async_client.py",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
# construct the PyPI readme from README.md and Debian changelog
fragments = [
    {path = "PYPI_README.md"},
    {text = "\n## Changelog\n\n"},
    {path = "debian/changelog", pattern = "(.+?) -- "},
    {text = "\n... see [here](https://github.com/univention/univention-corporate-server/blob/5.2-0/management/univention-directory-manager-rest/debian/changelog) for earlier changes.\n"},
]

[tool.hatch.version]
path = "debian/changelog"
pattern = "^univention-directory-manager-rest \\((?P<version>[0-9.-]+)\\)"

[tool.mypy]
strict = true

[tool.ruff]
extend = "../../pyproject.toml"
[tool.ruff.lint]
extend-ignore = ["UP007"]  # for Python < 3.10 (PEP 604 - Allow writing union types as X | Y)
