[metadata]
name = ucslint
maintainer = Univention GmbH
maintainer_email = packages@univention.de
description = Check packaging for UCS
url = https://www.univention.de/
license = GNU Affero General Public License v3
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Build Tools

[options]
zip_safe = False
python_requires = >=3.5
packages =
	univention.ucslint
install_requires =
	flake8
	python-apt
	python-debian
scripts =
	ucslint
	ucspep8

# [options.entry_points]
# console_scripts =
# 	ucspep8 = univention.ucslint.0020-flake:main

[options.extras_require]
junit = junit-xml>=1.8

[isort]
line_length = 160
skip_glob =
	bdist,
	build,
	debian,
	dist,
	sdist,
	testframework,
	.tox,
known_first_party =
	univention,
known_third_party =
	debian,

[flake8]
exclude =
	testframework/
ignore =
	# E101 indentation contains mixed spaces and tabs
	E101,
	# W191 indentation contains tabs
	W191,

[mypy]
# python_version = 3.7
ignore_missing_imports = False
