[metadata]
name = ucslint
maintainer = Univention GmbH
maintainer_email = packages@univention.de
description = Check packaging for UCS
url = https://www.univention.de/
license = GNU Affero General Public License v3
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.11
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Build Tools

[options]
zip_safe = False
python_requires = >=3.7
packages =
	univention.ucslint
install_requires =
	python-apt
	python-debian
tests_require =
	pytest
	pytest-cov
[options.entry_points]
console_scripts =
	ucslint = univention.ucslint.main:main
	ucslint-pre-commit = univention.ucslint.main:run
	ucslint-0001-joinscript = univention.ucslint.u0001_CheckJoinScript:main
	ucslint-0002-copy-paste-errors = univention.ucslint.u0002_CopyPasteErrors:main
	ucslint-0004-ucr = univention.ucslint.u0004_CheckUCR:main
	ucslint-0006-postinst = univention.ucslint.u0006_CheckPostinst:main
	ucslint-0007-changelog = univention.ucslint.u0007_Changelog:main
	ucslint-0008-translations = univention.ucslint.u0008_Translations:main
	ucslint-0009-python = univention.ucslint.u0009_Python:main
	ucslint-0010-copyright = univention.ucslint.u0010_Copyright:main
	ucslint-0011-control = univention.ucslint.u0011_Control:main
	ucslint-0013-bashism = univention.ucslint.u0013_bashism:main
	ucslint-0014-depends = univention.ucslint.u0014_Depends:main
	ucslint-0015-fuzzy-names = univention.ucslint.u0015_FuzzyNames:main
	ucslint-0016-deprecated = univention.ucslint.u0016_Deprecated:main
	ucslint-0017-shell = univention.ucslint.u0017_Shell:main
	ucslint-0018-debian = univention.ucslint.u0018_Debian:main

[options.extras_require]
junit = junit-xml>=1.8

[tool:pytest]
required_plugins =
	pytest-cov
testpaths =
	univention/ucslint
addopts =
	--verbose
	--showlocals
	-r sx
	--doctest-modules
python_paths = .

[mypy]
# python_version = 3.7
ignore_missing_imports = False
files = .
exclude = testframework

[mypy-setuptools]
ignore_missing_imports = True

[mypy-apt_pkg]
ignore_missing_imports = True

[mypy-debian.changelog]
ignore_missing_imports = True
