[metadata]
name = ucslint
maintainer = Univention GmbH
maintainer_email = packages@univention.de
description = Check packaging for UCS
url = https://www.univention.de/
license = GNU Affero General Public License v3
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.11
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Build Tools

[options]
zip_safe = False
python_requires = >=3.7
packages =
	univention.ucslint
install_requires =
	python-apt
	python-debian
scripts =
	ucslint

[options.extras_require]
junit = junit-xml>=1.8

[mypy]
# python_version = 3.7
ignore_missing_imports = False
files = .
exclude = testframework

[mypy-setuptools]
ignore_missing_imports = True

[mypy-apt_pkg]
ignore_missing_imports = True

[mypy-debian.changelog]
ignore_missing_imports = True
