[metadata]
name = univention-l10n
maintainer = Univention GmbH
maintainer_email = packages@univention.de
description = Univention Corporate Server localization tools
long_description = file:README.md
long_description_content_type = "text/markdown"
url = https://www.univention.de/
license = GNU Affero General Public License v3
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Build Tools
platforms=
	any

[options]
zip_safe = False
python_requires = >=2.7
packages =
	univention.l10n
setup_requires =
	setuptools
install_requires =
	lxml
	python-debian
	python-magic
	polib
scripts =
	univention-ucs-translation-build-package
	univention-ucs-translation-fakemessage
	univention-ucs-translation-merge

[options.package_data]
univention.l10n =
	*.tmpl

[options.entry_points]
console_scripts =
	univention-l10n = univention.l10n.cmd:main
	univention-l10n-build = univention.l10n.cmd:main_build
	univention-l10n-install = univention.l10n.cmd:main_install

[isort]
line_length = 160
skip_glob =
	bdist,
	build,
	debian,
	dist,
	sdist,
	.tox,
known_first_party =
	univention,
known_third_party =
	debian,

[flake8]
exclude =
ignore =
	# E101 indentation contains mixed spaces and tabs
	E101,
	# W191 indentation contains tabs
	W191,

[mypy]
# python_version = 3.7
ignore_missing_imports = False
files = .

[mypy-setuptools]
ignore_missing_imports = True

[mypy-apt_pkg]
ignore_missing_imports = True

[mypy-debian.changelog]
ignore_missing_imports = True
