[metadata]
author = Univention GmbH
author_email = packages@univention.de
description = Univention Keycloak
long_description = file: README.rst
keywords = Univention, Keycloak
url = https://www.univention.de/
license = GNU Affero General Public License v3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
include_package_data = False
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    python-debian==0.1.35
    python-keycloak==0.24.0
    python-ldap==3.1.0
    defusedxml==0.5.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    univention-keycloak = univention.keycloak.main:main

[bdist_wheel]
universal = 1
