[metadata]
name = generate-appliance
version = 1.0.0
author = Univention GmbH
author_email = packages@univention.de
description = Create virtual appliances for various virtualization systems
url = https://git.knut.univention.de/univention/ucs/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Packaging
license = GNU Affero General Public License v3
platforms =
    any

[options]
zip_safe = True
python_requires = >= 3.5
include_package_data = False
packages = find:
install_requires =
    boto3
    importlib_metadata; python_version < "3.8"
    lxml
tests_require =
    mypy
    boto3-stubs[s3,ec2]

[options.entry_points]
console_scripts =
    generate_appliance = generate_appliance.main:main
generate_appliance.targets =
    docker = generate_appliance.target.docker:Docker
    ec2_ebs = generate_appliance.target.ec2_ebs:EC2_EBS
    ova_esxi = generate_appliance.target.ova_esxi:OVA_ESXi
    ova_virtualbox = generate_appliance.target.ova_virtualbox:OVA_Virtualbox
    vmware = generate_appliance.target.vmware:VMware
