[tool.poetry]
name = "univention-admin-rest-client"
version = "0.1.0"
description = "Python and Bash clients for the UDM-REST-API"
authors = ["Johannes Lohmer <lohmer@univention.de>"]

[tool.poetry.dependencies]
python = "^3.7"
uritemplate = "*"
requests = "*"

[tool.poetry.dev-dependencies]
univention-admin-rest-client-test = "^0.1.0"

[tool.poetry.extras]
test = ["univention-admin-rest-client-test"]

[[tool.poetry.packages]]
include = "univention/admin/rest/client/*.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
