[project]
name = "univention-admin-rest-client-test"
description = "Testing wrapper around the UDM REST API Client"
version = "0.1.0"
authors = [
	{"name" = "Johannes Lohmer", "email" = "lohmer@univention.de"}
]
readme = "README.md"  # Add this if you have a readme file
dynamic = ["version"]
python = "^3.7"
dependencies = [
	"pytest^5.2",
	"univention-admin-rest-client^0.1.0",
]

[[tool.poetry.packages]]
include = "univention/admin/rest/client/*.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
